adicionados scripts services

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Implementação de um clone do https://www.tabnews.com.br/ para o https://curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && next dev",
+    "services:up": "nerdctl compose -f infra/compose.yml up -d",
+    "services:stop": "nerdctl compose -f infra/compose.yml stop",
+    "services:down": "nerdctl compose -f infra/compose.yml down --remove-orphans",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
